--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@ window.onload = function() {
   document.body.appendChild(viewer.canvas);
 };
 </script>
+<style>
+* {
+  font-family: arial, sans-serif;
+} </style>
 </head>
 <body>
-<h1>SphericalViewer</h1>
+<h1>spherical-viewer</h1>
 <ul>
   <li>Drag : Pan/Tilt</li>
   <li>Ctrl+Drag (Mac:command+Click) : Zoom</li>
