--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="spherical-viewer.js"></script>
 <script>
 window.onload = function() {
-  var viewer = sphericalviewer({
+  var viewer = spherical_viewer({
     src : 'my-picture.jpg',
     _maxTextureSize : 1024
   });
@@ -15,15 +15,14 @@ window.onload = function() {
 };
 </script>
 <style>
-* {
-  font-family: arial, sans-serif;
-} </style>
+* { font-family: arial, sans-serif; }
+</style>
 </head>
 <body>
 <h1>spherical-viewer</h1>
 <ul>
   <li>Drag : Pan/Tilt</li>
-  <li>Ctrl+Drag (Mac:command+Click) : Zoom</li>
+  <li>Ctrl+Drag (Mac:command+Drag) : Zoom</li>
   <li>Double-Click : Toggle Fullscreen</li>
 </ul>
 </body>
