--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ window.onload = function() {
 </style>
 </head>
 <body>
-<h1>spherical-viewer</h1>
+<h1>Spherical Viewer</h1>
 <ul>
   <li>Drag : Pan/Tilt</li>
   <li>Ctrl+Drag (Mac:command+Drag) : Zoom</li>
