--- a/demo/index.html
+++ b/demo/index.html
@@ -65,9 +65,9 @@
 </table>
 
 <ul>
-  <li><a href='?sv_params=%7B"url"%3A"ueno_park.jpg"%2C"p"%3A2.994377291846776%2C"t"%3A-0.4447196111101419%2C"z"%3A0.6704468055668809%7D'
+  <li><a href='?sv_params=%7B"url"%3A"https%3A%2F%2Fkazuhikoarase.github.io%2Fassets%2Fueno_park.jpg"%2C"p"%3A2.994377291846776%2C"t"%3A-0.4447196111101419%2C"z"%3A0.6704468055668809%7D'
   >Ueno Park</a></li>
-  <li><a href='?sv_params=%7B"url"%3A"nezu_jinja.jpg"%2C"p"%3A5.0111117091118995%2C"t"%3A0.2808143945548357%2C"z"%3A-0.5669114366236754%7D'
+  <li><a href='?sv_params=%7B"url"%3A"https%3A%2F%2Fkazuhikoarase.github.io%2Fassets%2Fnezu_jinja.jpg"%2C"p"%3A5.0111117091118995%2C"t"%3A0.2808143945548357%2C"z"%3A-0.5669114366236754%7D'
   >Nezu Jinja</a></li>
 </ul>
 
